# Semboola

./: README.md  jp.lv34.Semboola.json  jp.lv34.Semboola.json~  meson.build
data/: jp.lv34.Semboola.desktop.in  jp.lv34.Semboola.gschema.xml  jp.lv34.Semboola.metainfo.xml.in  jp.lv34.Semboola.service.in  meson.build
data/icons/: meson.build
data/user_data/: User-Agent.txt  data.db
po/: POTFILES.in  meson.build
src/: Semboola.gresource.xml  add_board.ui  add_board.vala  application.vala  boards.ui  boards.vala  clickable_label.vala  cookie_confirm.ui  cookie_confirm.vala  imageview.ui  imageview.vala  local_rules.ui  local_rules.vala  main.vala  meson.build  new_res.ui  new_res.vala  new_thread.ui  new_thread.vala  ng.ui  ng.vala  replies.ui  replies.vala  res_row.vala  ress.ui  ress.vala  style.css  thread_hist.ui  thread_hist.vala  thread_row.ui  thread_row.vala  threads.ui  threads.vala  window.cmb  window.ui  window.vala
src/common/: common.vala  image.vala
src/net/: db.vala  fivech.vala
src/subui/: ng_row.ui  ng_row.vala  ng_sub.ui  ng_sub.vala
